feat: scrolling and preventing XSS (security)

--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
 				<!-- Chat container -->
 				<div
 					id="chatContainer"
-					class="flex glow flex-col gap-6 overflow-y-auto pb-28"
+					class="h-[calc(100vh-120px)] [scrollbar-width:none] [&::-webkit-scrollbar]:hidden flex glow flex-col gap-6 overflow-y-auto pb-28"
 				>
 					<!-- User Message -->
 					<div id="userMessageContainer" class="flex justify-end hidden">
